samples/_failures_safe/1761661279_fb8d36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f92ee6f.c: In function ‘read_operator’:
./samples/SAFE/__tmp_2f92ee6f.c:165: error: expected ‘{’ at end of input
